Opened 14 years ago

Closed 14 years ago

#1288 closed defect (fixed)

meridian uncompressded: fails to decode

Reported by: ami_stuff Owned by: Carl Eugen Hoyos
Priority: normal Component: avcodec
Version: git-master Keywords: avui avid
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

The new decoder decodes correctly 32bpp interlaced mode (pal/ntsc), but fails with 24bpp.

I have also uploaded 32bpp progressive sample (which decodes incorrectly) and 24bpp progressive (which fails to decode.

mu_pal_interlaced_24bpp.mov:

http://www.datafilehost.com/download-d6eb51b6.html

mu_pal_interlaced_32bpp.mov:

http://www.datafilehost.com/download-e2487b10.html

mu_pal_progressive_24bpp.mov:

http://www.datafilehost.com/download-c31925c8.html

mu_pal_progressive_32bpp.mov:

http://www.datafilehost.com/download-7d1105d2.html

C:\>ffmpeg -i mu_pal_interlaced_24bpp.mov out.avi
ffmpeg version N-40511-g66337bf Copyright (c) 2000-2012 the FFmpeg developers
  built on May  9 2012 02:38:42 with gcc 4.5.0 20100414 (Fedora MinGW 4.5.0-1.fc
14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapshots/buil
d/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/snapshots/b
uild/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --enable-n
onfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-libvorbis
--enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-libopencor
e-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 50.100 / 51. 50.100
  libavcodec     54. 21.100 / 54. 21.100
  libavformat    54.  4.100 / 54.  4.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 72.105 /  2. 72.105
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 11.100 /  0. 11.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'mu_pal_interlaced_24bpp.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2012-05-08 00:01:45
  Duration: 00:00:05.95, start: 0.000000, bitrate: 5755 kb/s
    Stream #0:0(eng): Video: avui (AVUI / 0x49555641), yuva422p, 720x486, 5713 k
b/s, SAR 10:11 DAR 400:297, 1 fps, 1 tbr, 1000k tbn, 1000k tbc
    Metadata:
      creation_time   : 2012-05-08 00:01:45
      handler_name    : Procedura obs│ugi skrˇtˇw danych Apple
w:720 h:486 pixfmt:yuva422p tb:1/1000000 sar:10/11 sws_param:flags=2
[buffersink @ 0x1dd26e0] auto-inserting filter 'auto-inserted scale 0' between t
he filter 'src' and the filter 'out'
[scale @ 0x1dd2b80] w:720 h:486 fmt:yuva422p sar:10/11 -> w:720 h:486 fmt:yuv420
p sar:10/11 flags:0x4
Output #0, avi, to 'out.avi':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2012-05-08 00:01:45
    ISFT            : Lavf54.4.100
    Stream #0:0(eng): Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 720x486 [SAR 10
:11 DAR 400:297], q=2-31, 200 kb/s, 1 tbn, 1 tbc
    Metadata:
      creation_time   : 2012-05-08 00:01:45
      handler_name    : Procedura obs│ugi skrˇtˇw danych Apple
Stream mapping:
  Stream #0:0 -> #0:0 (avui -> mpeg4)
Press [q] to stop, [?] for help
[avui @ 0x1dc2320] Insufficient input data.
Error while decoding stream #0:0
[avui @ 0x1dc2320] Insufficient input data.
Error while decoding stream #0:0
[avui @ 0x1dc2320] Insufficient input data.
Error while decoding stream #0:0
[avui @ 0x1dc2320] Insufficient input data.
Error while decoding stream #0:0
[avui @ 0x1dc2320] Insufficient input data.
Error while decoding stream #0:0
[avui @ 0x1dc2320] Insufficient input data.
Error while decoding stream #0:0
frame=    0 fps=0.0 q=0.0 Lsize=       6kB time=00:00:00.00 bitrate=   0.0kbits/
s
video:0kB audio:0kB global headers:0kB muxing overhead inf%
Output file is empty, nothing was encoded (check -ss / -t / -frames parameters i
f used)

Attachments (2)

meridien.rar (810.8 KB ) - added by ami_stuff 14 years ago.
mer.jpg (83.7 KB ) - added by ami_stuff 14 years ago.

Download all attachments as: .zip

Change History (8)

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavcodec
Keywords: avui avid added
Owner: set to Carl Eugen Hoyos
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Carl Eugen Hoyos, 14 years ago

Thank you for the samples!

comment:3 by ami_stuff, 14 years ago

here are two more samples, maybe easier for compare

by ami_stuff, 14 years ago

Attachment: meridien.rar added

comment:4 by ami_stuff, 14 years ago

progressive vs interlaced can be identified by mareked value (see mer.jpg)

01 - progressive
02 - interlaced

by ami_stuff, 14 years ago

Attachment: mer.jpg added

comment:5 by ami_stuff, 14 years ago

int 576 vs int 486 should be probably identified only by height, because this codec doesn't support custom sizes

comment:6 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.