Support more Avid Meridien / AVUI samples.

Fixes ticket #1288.